@@ -2,7 +2,6 @@ package net.evendanan.bazel.mvn.merger;
 
 import java.io.IOException;
 import java.net.HttpURLConnection;
-import java.net.URI;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -10,6 +9,7 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+
 import net.evendanan.bazel.mvn.api.Dependency;
 import org.junit.Assert;
 import org.junit.Before;
@@ -18,12 +18,12 @@ import org.mockito.Mockito;
 
 public class SourcesLocatorTest {
 
-    private final URI dep1Uri = URI.create("https://example.com/repo/net/evendanan/dep1/1.0.0/dep1-1.0.0.jar");
-    private final URI dep1UriSources = URI.create("https://example.com/repo/net/evendanan/dep1/1.0.0/dep1-1.0.0-sources.jar");
-    private final URI dep2Uri = URI.create("https://example.com/repo/net/evendanan/dep2/1.0.0/dep2-1.0.0.jar");
-    private final URI dep2UriSources = URI.create("https://example.com/repo/net/evendanan/dep2/1.0.0/dep2-1.0.0-sources.jar");
-    private final URI dep3Uri = URI.create("https://example.com/repo/net/evendanan/dep3/2.0.0/dep3-2.0.0.aar");
-    private final URI dep3UriSources = URI.create("https://example.com/repo/net/evendanan/dep3/2.0.0/dep3-2.0.0-sources.jar");
+    private final String dep1Uri = "https://example.com/repo/net/evendanan/dep1/1.0.0/dep1-1.0.0.jar";
+    private final String dep1UriSources = "https://example.com/repo/net/evendanan/dep1/1.0.0/dep1-1.0.0-sources.jar";
+    private final String dep2Uri = "https://example.com/repo/net/evendanan/dep2/1.0.0/dep2-1.0.0.jar";
+    private final String dep2UriSources = "https://example.com/repo/net/evendanan/dep2/1.0.0/dep2-1.0.0-sources.jar";
+    private final String dep3Uri = "https://example.com/repo/net/evendanan/dep3/2.0.0/dep3-2.0.0.aar";
+    private final String dep3UriSources = "https://example.com/repo/net/evendanan/dep3/2.0.0/dep3-2.0.0-sources.jar";
     private SourcesJarLocator mUnderTest;
     private FakeOpener mFakeOpener;
     private List<Dependency> mTestData;
@@ -31,18 +31,31 @@ public class SourcesLocatorTest {
     @Before
     public void setup() {
         mTestData = Arrays.asList(
-                new Dependency("net.evendanan", "dep1", "1.0.0", "jar",
-                        Collections.emptyList(), Collections.emptyList(), Collections.singleton(
-                        new Dependency("net.evendanan", "dep2", "1.0.0", "jar",
-                                Collections.emptyList(), Collections.emptyList(), Collections.emptyList(),
-                                dep2Uri, URI.create(""), URI.create(""), Collections.emptyList())),
-                        dep1Uri, URI.create(""), URI.create(""), Collections.emptyList()),
-                new Dependency("net.evendanan", "dep3", "2.0.0", "aar",
-                        Collections.singleton(
-                                new Dependency("net.evendanan", "dep2", "1.0.0", "jar",
-                                        Collections.emptyList(), Collections.emptyList(), Collections.emptyList(),
-                                        dep2Uri, URI.create(""), URI.create(""), Collections.emptyList())), Collections.emptyList(), Collections.emptyList(),
-                        dep3Uri, URI.create(""), URI.create(""), Collections.emptyList()));
+                Dependency.newBuilder()
+                        .setGroupId("net.evendanan")
+                        .setArtifactId("dep1")
+                        .setVersion("1.0.0")
+                        .setPackaging("jar")
+                        .addAllRuntimeDependencies(Collections.singleton(Dependency.newBuilder()
+                                .setGroupId("net.evendanan")
+                                .setArtifactId("dep2")
+                                .setVersion("1.0.0")
+                                .setPackaging("jar")
+                                .setUrl(dep2Uri).build()))
+                        .setUrl(dep1Uri).build(),
+                Dependency.newBuilder()
+                        .setGroupId("net.evendanan")
+                        .setArtifactId("dep3")
+                        .setVersion("2.0.0")
+                        .setPackaging("aar")
+                        .addAllDependencies(Collections.singleton(
+                                Dependency.newBuilder()
+                                        .setGroupId("net.evendanan")
+                                        .setArtifactId("dep2")
+                                        .setVersion("1.0.0")
+                                        .setPackaging("jar")
+                                        .setUrl(dep2Uri).build()))
+                        .setUrl(dep3Uri).build());
 
         mFakeOpener = new FakeOpener();
         mUnderTest = new SourcesJarLocator(mFakeOpener);
@@ -53,62 +66,62 @@ public class SourcesLocatorTest {
     public void testAddsSourcesIfExists() throws Exception {
         final HttpURLConnection httpURLConnection = Mockito.mock(HttpURLConnection.class);
         Mockito.doReturn(200).when(httpURLConnection).getResponseCode();
-        mFakeOpener.returnedConnections.put(dep1UriSources.toURL(), httpURLConnection);
-        mFakeOpener.returnedConnections.put(dep2UriSources.toURL(), httpURLConnection);
-        mFakeOpener.returnedConnections.put(dep3UriSources.toURL(), httpURLConnection);
+        mFakeOpener.returnedConnections.put(new URL(dep1UriSources), httpURLConnection);
+        mFakeOpener.returnedConnections.put(new URL(dep2UriSources), httpURLConnection);
+        mFakeOpener.returnedConnections.put(new URL(dep3UriSources), httpURLConnection);
 
         final List<Dependency> fixedDeps = new ArrayList<>(mUnderTest.fillSourcesAttribute(mTestData));
 
-        Assert.assertEquals(dep1UriSources.toASCIIString(), fixedDeps.get(0).sourcesUrl().toASCIIString());
-        Assert.assertEquals(dep3UriSources.toASCIIString(), fixedDeps.get(1).sourcesUrl().toASCIIString());
+        Assert.assertEquals(dep1UriSources, fixedDeps.get(0).getSourcesUrl());
+        Assert.assertEquals(dep3UriSources, fixedDeps.get(1).getSourcesUrl());
 
-        final List<Dependency> deeperDeps = new ArrayList<>(fixedDeps.get(1).dependencies());
+        final List<Dependency> deeperDeps = new ArrayList<>(fixedDeps.get(1).getDependenciesList());
 
-        Assert.assertEquals(dep2UriSources.toASCIIString(), deeperDeps.get(0).sourcesUrl().toASCIIString());
+        Assert.assertEquals(dep2UriSources, deeperDeps.get(0).getSourcesUrl());
     }
 
     @Test
     public void testDoesNotAddOnException() throws Exception {
         final HttpURLConnection httpURLConnection = Mockito.mock(HttpURLConnection.class);
         Mockito.doThrow(new IOException()).when(httpURLConnection).getResponseCode();
-        mFakeOpener.returnedConnections.put(dep1Uri.toURL(), httpURLConnection);
-        mFakeOpener.returnedConnections.put(dep2Uri.toURL(), httpURLConnection);
-        mFakeOpener.returnedConnections.put(dep3Uri.toURL(), httpURLConnection);
+        mFakeOpener.returnedConnections.put(new URL(dep1Uri), httpURLConnection);
+        mFakeOpener.returnedConnections.put(new URL(dep2Uri), httpURLConnection);
+        mFakeOpener.returnedConnections.put(new URL(dep3Uri), httpURLConnection);
 
         final List<Dependency> fixedDeps = new ArrayList<>(mUnderTest.fillSourcesAttribute(mTestData));
 
-        Assert.assertEquals("", fixedDeps.get(0).sourcesUrl().toASCIIString());
-        Assert.assertEquals("", fixedDeps.get(1).sourcesUrl().toASCIIString());
+        Assert.assertEquals("", fixedDeps.get(0).getSourcesUrl());
+        Assert.assertEquals("", fixedDeps.get(1).getSourcesUrl());
 
-        final List<Dependency> deeperDeps = new ArrayList<>(fixedDeps.get(1).dependencies());
+        final List<Dependency> deeperDeps = new ArrayList<>(fixedDeps.get(1).getDependenciesList());
 
-        Assert.assertEquals("", deeperDeps.get(0).sourcesUrl().toASCIIString());
+        Assert.assertEquals("", deeperDeps.get(0).getSourcesUrl());
     }
 
     @Test
     public void testDoesNotAddOnNone200ResponseCode() throws Exception {
         final HttpURLConnection httpURLConnection = Mockito.mock(HttpURLConnection.class);
         Mockito.doReturn(400).when(httpURLConnection).getResponseCode();
-        mFakeOpener.returnedConnections.put(dep1Uri.toURL(), httpURLConnection);
-        mFakeOpener.returnedConnections.put(dep2Uri.toURL(), httpURLConnection);
-        mFakeOpener.returnedConnections.put(dep3Uri.toURL(), httpURLConnection);
+        mFakeOpener.returnedConnections.put(new URL(dep1Uri), httpURLConnection);
+        mFakeOpener.returnedConnections.put(new URL(dep2Uri), httpURLConnection);
+        mFakeOpener.returnedConnections.put(new URL(dep3Uri), httpURLConnection);
 
         final List<Dependency> fixedDeps = new ArrayList<>(mUnderTest.fillSourcesAttribute(mTestData));
 
-        Assert.assertEquals("", fixedDeps.get(0).sourcesUrl().toASCIIString());
-        Assert.assertEquals("", fixedDeps.get(1).sourcesUrl().toASCIIString());
+        Assert.assertEquals("", fixedDeps.get(0).getSourcesUrl());
+        Assert.assertEquals("", fixedDeps.get(1).getSourcesUrl());
 
-        final List<Dependency> deeperDeps = new ArrayList<>(fixedDeps.get(1).dependencies());
+        final List<Dependency> deeperDeps = new ArrayList<>(fixedDeps.get(1).getDependenciesList());
 
-        Assert.assertEquals("", deeperDeps.get(0).sourcesUrl().toASCIIString());
+        Assert.assertEquals("", deeperDeps.get(0).getSourcesUrl());
     }
 
     @Test
     public void testDoesNotAddOnNullConnection() throws Exception {
         final List<Dependency> fixedDeps = new ArrayList<>(mUnderTest.fillSourcesAttribute(mTestData));
 
-        Assert.assertEquals("", fixedDeps.get(0).sourcesUrl().toASCIIString());
-        Assert.assertEquals("", fixedDeps.get(1).sourcesUrl().toASCIIString());
+        Assert.assertEquals("", fixedDeps.get(0).getSourcesUrl());
+        Assert.assertEquals("", fixedDeps.get(1).getSourcesUrl());
     }
 
     @Test
@@ -117,38 +130,38 @@ public class SourcesLocatorTest {
 
         final List<Dependency> fixedDeps = new ArrayList<>(mUnderTest.fillSourcesAttribute(mTestData));
 
-        Assert.assertEquals("", fixedDeps.get(0).sourcesUrl().toASCIIString());
-        Assert.assertEquals("", fixedDeps.get(1).sourcesUrl().toASCIIString());
+        Assert.assertEquals("", fixedDeps.get(0).getSourcesUrl());
+        Assert.assertEquals("", fixedDeps.get(1).getSourcesUrl());
 
-        final List<Dependency> deeperDeps = new ArrayList<>(fixedDeps.get(1).dependencies());
+        final List<Dependency> deeperDeps = new ArrayList<>(fixedDeps.get(1).getDependenciesList());
 
-        Assert.assertEquals("", deeperDeps.get(0).sourcesUrl().toASCIIString());
+        Assert.assertEquals("", deeperDeps.get(0).getSourcesUrl());
     }
 
     @Test
     public void testOnlyQueriesURIOnce() throws Exception {
         final HttpURLConnection httpURLConnection1 = Mockito.mock(HttpURLConnection.class);
         Mockito.doReturn(200).when(httpURLConnection1).getResponseCode();
-        mFakeOpener.returnedConnections.put(dep1UriSources.toURL(), httpURLConnection1);
+        mFakeOpener.returnedConnections.put(new URL(dep1UriSources), httpURLConnection1);
         final HttpURLConnection httpURLConnection2 = Mockito.mock(HttpURLConnection.class);
         Mockito.doReturn(200).when(httpURLConnection2).getResponseCode();
-        mFakeOpener.returnedConnections.put(dep2UriSources.toURL(), httpURLConnection2);
+        mFakeOpener.returnedConnections.put(new URL(dep2UriSources), httpURLConnection2);
         final HttpURLConnection httpURLConnection3 = Mockito.mock(HttpURLConnection.class);
         Mockito.doReturn(200).when(httpURLConnection3).getResponseCode();
-        mFakeOpener.returnedConnections.put(dep3UriSources.toURL(), httpURLConnection3);
+        mFakeOpener.returnedConnections.put(new URL(dep3UriSources), httpURLConnection3);
 
         final List<Dependency> fixedDeps = new ArrayList<>(mUnderTest.fillSourcesAttribute(mTestData));
 
-        Assert.assertEquals(dep1UriSources.toASCIIString(), fixedDeps.get(0).sourcesUrl().toASCIIString());
-        Assert.assertEquals(dep3UriSources.toASCIIString(), fixedDeps.get(1).sourcesUrl().toASCIIString());
+        Assert.assertEquals(dep1UriSources, fixedDeps.get(0).getSourcesUrl());
+        Assert.assertEquals(dep3UriSources, fixedDeps.get(1).getSourcesUrl());
 
-        final List<Dependency> deeperDeps = new ArrayList<>(fixedDeps.get(1).dependencies());
+        final List<Dependency> deeperDeps = new ArrayList<>(fixedDeps.get(1).getDependenciesList());
 
-        Assert.assertEquals(dep2UriSources.toASCIIString(), deeperDeps.get(0).sourcesUrl().toASCIIString());
+        Assert.assertEquals(dep2UriSources, deeperDeps.get(0).getSourcesUrl());
 
-        final List<Dependency> otherDeeperDeps = new ArrayList<>(fixedDeps.get(0).runtimeDependencies());
+        final List<Dependency> otherDeeperDeps = new ArrayList<>(fixedDeps.get(0).getRuntimeDependenciesList());
 
-        Assert.assertEquals(dep2UriSources.toASCIIString(), otherDeeperDeps.get(0).sourcesUrl().toASCIIString());
+        Assert.assertEquals(dep2UriSources, otherDeeperDeps.get(0).getSourcesUrl());
 
         Assert.assertEquals(3, mFakeOpener.buildsCounter.size());
         mFakeOpener.buildsCounter.forEach((url, integer) -> Assert.assertEquals(1, integer.intValue()));
@@ -165,7 +178,7 @@ public class SourcesLocatorTest {
         });
     }
 
-    private static class FakeOpener implements SourcesJarLocator.ConnectionOpener {
+    private static class FakeOpener implements net.evendanan.bazel.mvn.merger.SourcesJarLocator.ConnectionFactory {
 
         private final Map<URL, Integer> buildsCounter = new HashMap<>();
         private final Map<URL, HttpURLConnection> returnedConnections = new HashMap<>();
@@ -174,7 +187,7 @@ public class SourcesLocatorTest {
 
         @Override
         public HttpURLConnection openUrlConnection(final URL url) throws IOException {
-            buildsCounter.compute(url, (key, count) -> count==null ? 1:count + 1);
+            buildsCounter.compute(url, (key, count) -> count == null ? 1 : count + 1);
 
             if (openFailure) {
                 throw new IOException("failed to open connection");
